fix scrollbar scss

--- a/src/style/components/_App.scss
+++ b/src/style/components/_App.scss
@@ -1,12 +1,12 @@
 @import '../constants/var';
 
 .App {
-    background-color: $primary-color;
+    background-color: $primary-color-1;
     min-height: 100vh;
 }
 
 .App-header {
-    background-color: $primary-color;
+    background-color: $primary-color-1;
     text-align: center;
     min-height: 10vh;
     display: flex;
