--- a/src/style/constants/_var.scss
+++ b/src/style/constants/_var.scss
@@ -14,4 +14,5 @@ $attr-name-color: #f55385;
 $attr-value-color: #519aba;
 
 // background color
-$primary-color: #252933;
+$primary-color-1: #252933;
+$primary-color-2: #2b2b2b;
